# TFLiteSegmentationQt

./: .gitignore  CMakeLists.txt  LICENSE  README.md
label_image/: label_image.cc  label_image.h
src/: MainWindow.cpp  MainWindow.hpp  main.cpp
